--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"grunt-contrib-watch": "*",
 		"grunt-contrib-uglify": "*",
 		"grunt-contrib-concat": "*",
-		"grunt-contrib-sass": "*"
+		"grunt-contrib-sass": "*",
+		"grunt-contrib-imagemin": "*"
 	}
 }
